@@ -1,3 +1,7 @@
+2007-08-29  Badlop  <badlop@ono.com>
+
+	* src/mod_ctlextra.erl: Added comand: stats uptime-seconds.
+
 2007-08-24  Badlop  <badlop@ono.com>
 
 	* src/mod_ctlextra.erl: Fixed bug in vcard-set command that forgot second level attributes.
